修复废弃API：clazz.newInstance() → getDeclaredConstructor().newInstance()，RandomStringUtils.random() → secure().next()
- 5处 clazz.newInstance() 替换为 clazz.getDeclaredConstructor().newInstance()
- 2处 RandomStringUtils.random() 替换为 RandomStringUtils.secure().next()
- 异常声明 InstantiationError/IllegalAccessException 统一改为 ReflectiveOperationException

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>